relecture texte et correction

--- a/Analyses Descriptives et Explicatives/Analyse Descriptive et Explicative.ipynb
+++ b/Analyses Descriptives et Explicatives/Analyse Descriptive et Explicative.ipynb
@@ -505,7 +505,7 @@
     "L'analyse en composantes principales (ACP) a deux objectifs principaux :\n",
     "\n",
     "- étudier la liaison entre les variables\n",
-    "- étudier la variabilité entre individus. La premier objectif consiste à interpréter le cercle des correlations et de calculer les composantes principales.\n",
+    "- étudier la variabilité entre individus. La premier objectif consiste à interpréter le cercle des corrélations et de calculer les composantes principales.\n",
     "\n",
     "L'analyse en composantes principales nous permet d'effectuer une réduction de dimension et de déceler des dépendances entre des variables."
    ]
@@ -535,7 +535,7 @@
    "id": "e479edae",
    "metadata": {},
    "source": [
-    "Avant de représenter les cercles de corrélations pour les différents couples d'axes principaux d'inertie, il faut connaître le nombre de composantes principales optimales. \n",
+    "Avant de représenter les cercles de corrélations pour les différents couples d'axes principaux d'inertie, il faut connaître le nombre de composantes principales optimal. \n",
     "\n",
     "Pour cela, la fonction maPCA est utilisée pour le nombre total de variables quantitatives de la base de données. \n",
     "Pour avoir accès au nombre de composantes principales optimal, il suffit de représenter l'éboulis des valeurs propres. \n",
@@ -872,7 +872,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Cette fonction donne un vecteur avec le numero du cluster pour chaque point\n",
+    "\"\"\" Cette fonction donne un vecteur avec le numéro du cluster pour chaque point\n",
     "Entrées :\n",
     "- n_clust : le nombre de cluster choisi\n",
     "- data : le dataframe,\n",
